# localepurge-rs

./: .pre-commit-config.yaml  Cargo.toml  README.org
src/: .localepurge.toml  config.rs  main.rs
