[package]
name = "localepurge-rs"
version = "0.1.0"
edition = "2021"
authors = ["jnpn <johan.ponin.pro@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
toml = "0.5.9"
serde = { version = "1.0.143", features = ["derive"] }
regex = "1.6.0"
log = { version = "^0.4.14", features = ["std"] }
env_logger = "0.9.0"
